--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip3 install openai
-pip3 install llama-index 
-pip3 install pypdf 
-pip3 install gradio 
+pip install openai
+pip install llama-index 
+pip install pypdf 
+pip install gradio 
